fixed header h2 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
 
 	header h2 {
 		font-size: 1.5em;
-		line-height: 1.5em;
+		line-height: 2.5em;
 	}
 
 	sub {
